--- a/app/src/main/res/layout/item_task.xml
+++ b/app/src/main/res/layout/item_task.xml
@@ -10,6 +10,6 @@
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:text="Tasksss" />
+        android:text="Tasks" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
